--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,7 @@ jobs:
       - name: aws cli version
         run: aws --version
       - name: code updation
-        run: aws lambda update-function-code --function-name lambda-demo-func --zip-file fileb://python.zip
+        run: aws lambda update-function-code --function-name lambda-demo-func --zip-file fileb://python.zip --region us-east-1
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
